<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_bg"
    android:orientation="vertical" >
    <include android:id="@+id/title" layout="@layout/title_layout" />
    <LinearLayout
        android:id="@+id/service_pay_basic_info_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:background="@color/white"
    	android:paddingLeft="15dp"
    	android:layout_marginBottom="10dp"
	    	android:paddingRight="15dp"
    	android:orientation="vertical"
        >
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:minHeight="42dp"
	    	android:gravity="center_vertical"
	    	android:layout_marginTop="5dp"
	    	android:orientation="horizontal"
        	>
	        <TextView 
	            android:id="@+id/service_pay_basic_info_name1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/name" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_name2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:singleLine="true"
		    	android:textSize="16sp"
		    	android:maxLength="10"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_name"
	            />
	        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:gravity="center_vertical"
	    	android:layout_marginTop="5dp"
	    	android:minHeight="42dp"
	    	android:orientation="horizontal"
        	>
	        <TextView 
	            android:id="@+id/service_pay_basic_info_phone1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/setting_mobile_number" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_phone2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:singleLine="true"
		    	android:textSize="16sp"
		    	android:inputType="phone"
		    	android:maxLength="11"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_phone_number"
	            />
	        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:layout_marginTop="5dp"
	    	android:gravity="center_vertical"
	    	android:orientation="horizontal">
	        <TextView 
	            android:id="@+id/service_pay_basic_info_remark1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/remark" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_remark2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:gravity="top"
		    	android:lines="3"
		    	android:textSize="16sp"
		    	android:maxLength="200"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_something_to_doctor"
	            />
	        </LinearLayout>
    </LinearLayout>

    <RelativeLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:visibility="gone"
	    android:background="@color/white"
        >
        <TextView 
            android:id="@+id/service_pay_wallet_balance1"
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:padding="10dp"
	    	android:textSize="18sp"
	    	android:text="@string/wallet_balance"
            />
        <TextView 
            android:id="@+id/service_pay_wallet_balance2"
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:padding="10dp"
	    	android:textSize="18sp"
	    	android:layout_alignParentRight="true"
            />
        <View style="@style/common_split_line_2dp" android:id="@+id/service_pay_split_0" android:layout_below="@id/service_pay_wallet_balance2"/>
        <TextView 
            android:id="@+id/service_pay_still_need1"
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:padding="10dp"
	    	android:textSize="18sp"
	    	android:layout_below="@id/service_pay_split_0"
	    	android:text="@string/still_need_pay"
            />
        <TextView 
            android:id="@+id/service_pay_still_need2"
            android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" 
	    	android:padding="10dp"
	    	android:textSize="18sp"
	    	android:layout_alignParentRight="true"
	    	android:layout_alignTop="@id/service_pay_still_need1"
            />
    </RelativeLayout>
    <LinearLayout 
        android:id="@+id/service_pay_method_layout"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content" 
   		android:background="@color/white"
   		android:orientation="vertical"
        >
        <TextView 
            android:layout_width="match_parent"
   			android:layout_height="wrap_content" 
   			android:padding="10dp"
   			android:textSize="14sp"
   			android:textColor="#999999"
   			android:text="@string/charge_payment"
            />
         <View style="@style/common_split_line_1dp"/>
        <TextView 
            android:id="@+id/service_pay_method_zhifubao"
            android:layout_width="match_parent"
			android:layout_height="42dp"
			android:padding="10dp"
			android:textSize="15sp"
			android:textColor="#4B4B4B"
			android:clickable="true"
			android:text="@string/pay_by_zhifubao" 
			android:drawableRight="@drawable/pay_index_icon"
            />
        <View style="@style/common_split_line_1dp"/>
        <TextView 
            android:id="@+id/service_pay_method_yinlian"
            android:layout_width="match_parent"
			android:layout_height="42dp"
			android:padding="10dp"
			android:textSize="15sp"
			android:textColor="#4B4B4B"
			android:clickable="true"
			android:text="@string/pay_by_yinlian" 
			android:drawableRight="@drawable/pay_index_icon"
            />
        <View style="@style/common_split_line_1dp"/>
        <LinearLayout 
            android:id="@+id/service_pay_method_wallet"
            android:layout_width="match_parent"
			android:layout_height="42dp"
			android:orientation="horizontal"
            >
            <TextView 
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:textSize="15sp"
				android:textColor="#4B4B4B"
				android:text="@string/pay_by_wallet" 
	            />
            <TextView 
	            android:id="@+id/service_pay_method_wallet_money"
	            android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:drawablePadding="@dimen/dp_8"
				android:clickable="true"
				android:layout_marginRight="10dp"
				android:drawableRight="@drawable/pay_index_icon"
            />
        </LinearLayout>
    </LinearLayout>
     <LinearLayout 
            android:id="@+id/service_pay_method_tip"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:gravity="center"
			android:orientation="vertical"
            >
            <TextView 
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="2dp"
				android:textSize="15sp"
				android:textColor="#B1B1B1"
				android:text="@string/kindly_remander" 
	            />
            <TextView 
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="2dp"
				android:textSize="15sp"
				android:textColor="#B1B1B1"
				android:text="@string/pay_tip_1" 
	            />
            <TextView 
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="2dp"
				android:textSize="15sp"
				android:textColor="#B1B1B1"
				android:text="@string/pay_tip_2" 
	            />
        </LinearLayout>
    
</LinearLayout>
