<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/include"
            layout="@layout/title_layout" />

        <TextView
            android:id="@+id/tv_uploadpic"
            style="@style/application_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_pic" />

        <View style="@style/common_split_line" />

        <com.library.base.widget.CircleImageView
            android:id="@+id/image_illpic"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_illpicbg"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_create_topic_add_icon"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/application_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_title" />

        <View style="@style/common_split_line" />

        <EditText
            android:id="@+id/et_title"
            style="@style/application_content_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/please_fill" >
        </EditText>

        <View style="@style/common_split_line_6dp" />

        <TextView
            android:id="@+id/tv_addwords"
            style="@style/application_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_words" />

        <View style="@style/common_split_line" />

        <EditText
            android:id="@+id/et_message"
            style="@style/application_content_style"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/please_fill_content"
            android:maxLength="1000" >
        </EditText>

        <TextView
            android:id="@+id/tv_textcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="15.0dp"
            android:text="@string/text_count"
            android:textColor="@color/dark_black"
            android:textSize="@dimen/messageTextSize" />

        <TextView
            android:id="@+id/tv_showForWhom"
            style="@style/application_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_for_whom"
            android:visibility="visible" />

        <View style="@style/common_split_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:visibility="visible" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/cb_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box1"
                    android:paddingLeft="15dp"
                    android:text="@string/Doctor"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/cb_patient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/check_box1"
                    android:paddingLeft="15dp"
                    android:text="@string/patient"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="20.5dp"
            android:layout_marginRight="20.5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_orange"
            android:scaleType="centerCrop"
            android:text="@string/delete"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>