<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/find_paswd_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/icon_bg_gray_96"
        android:hint="@string/please_input_phone"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/find_paswd_input_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/icon_bg_gray_96"
            android:hint="@string/please_input_verify_code"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true" />

        <Button
            android:id="@+id/find_paswd_btn_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/icon_bg_pink_96"
            android:text="@string/phone_code"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/find_paswd_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bt_regist_sure"
        android:text="@string/setting_next"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>