<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_bg"
    android:orientation="vertical" >
    <include layout="@layout/gray_title_layout"/>
<LinearLayout
        android:id="@+id/service_pay_basic_info_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:background="@color/white"
    	android:paddingLeft="15dp"
    	android:layout_marginBottom="10dp"
	    	android:paddingRight="15dp"
    	android:orientation="vertical"
        >
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:minHeight="42dp"
	    	android:gravity="center_vertical"
	    	android:id="@+id/name_view"
	    	android:layout_marginTop="5dp"
	    	android:orientation="horizontal"
        	>
	        <TextView 
	            android:id="@+id/service_pay_basic_info_name1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/name" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_name2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:singleLine="true"
		    	android:textSize="16sp"
		    	android:maxLength="10"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_name"
	            />
	        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:gravity="center_vertical"
	    	android:layout_marginTop="5dp"
	    	android:id="@+id/phone_view"
	    	android:minHeight="42dp"
	    	android:orientation="horizontal"
        	>
	        <TextView 
	            android:id="@+id/service_pay_basic_info_phone1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/setting_mobile_number" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_phone2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:singleLine="true"
		    	android:textSize="16sp"
		    	android:inputType="phone"
		    	android:maxLength="11"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_phone_number"
	            />
	        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content" 
	    	android:layout_marginTop="5dp"
	    	android:gravity="center_vertical"
	    	android:orientation="horizontal">
	        <TextView 
	            android:id="@+id/service_pay_basic_info_remark1"
		        android:layout_width="100dp"
		    	android:layout_height="wrap_content"
		    	android:textSize="16sp"
		    	android:textColor="#4B4B4B"
		    	android:text="@string/remark" 
	            />
	        <EditText 
	            android:id="@+id/service_pay_basic_info_remark2"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content" 
		    	android:gravity="top"
		    	android:lines="3"
		    	android:textSize="16sp"
		    	android:maxLength="200"
		    	android:background="@drawable/common_edittext_bg"
		    	android:hint="@string/please_input_something_to_doctor"
	            />
	        </LinearLayout>
	        <Button android:layout_margin="5dp" android:id="@+id/chat_action" android:layout_width="fill_parent" android:textColor="@color/white" android:layout_height="wrap_content" android:text="看医生" android:background="@drawable/bt_short_orange"/>
    </LinearLayout>
</LinearLayout>
